--- a/config-repo/dev-common/application-escfg-dev.properties
+++ b/config-repo/dev-common/application-escfg-dev.properties
@@ -1,6 +1,6 @@
 es.cluster.name=gt-cluster
 es.host=192.168.0.100
 es.scheme=http
-es.username=elastic
-es.password=changeme
+es.username=**
+es.password=***
 es.port=9200
