--- a/config-repo/dev-common/application-dbcfg-dev.properties
+++ b/config-repo/dev-common/application-dbcfg-dev.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.0.100:3306/bjx?autoReconnect=true&amp;useUnicode=true&amp;zeroDateTimeBehavior=convertToNull;characterEncoding=utf8mb4
-spring.datasource.username=admin
-spring.datasource.password=123456
+spring.datasource.url=*****************
+spring.datasource.username=**********
+spring.datasource.password=*************
 
 ## druid
 spring.datasource.initialSize=6
